Add more chapters and fixing things

--- a/java-se-study/java-8/jconcepts/.vim/coc-settings.json
+++ b/java-se-study/java-8/jconcepts/.vim/coc-settings.json
@@ -4,8 +4,7 @@
         {
             "default": true,
             "name": "JavaSE-11",
-            "path": "/home/linuxbrew/.linuxbrew/opt/openjdk@11/libexec"
+            "path": "${env:JAVA_HOME_11}"
         }
-    ],
-    "java.configuration.updateBuildConfiguration": "automatic"
+    ]
 }
