More cool changes introducing the exam extension

--- a/java-se-study/java-8/examples/.vim/coc-settings.json
+++ b/java-se-study/java-8/examples/.vim/coc-settings.json
@@ -3,8 +3,8 @@
     "java.configuration.runtimes": [
         {
             "default": true,
-            "name": "JavaSE-17",
-            "path": "/home/linuxbrew/.linuxbrew/Cellar/openjdk@17/17.0.12/libexec/"
+            "name": "JavaSE-11",
+            "path": "/home/linuxbrew/.linuxbrew/Cellar/openjdk@11/11.0.24/libexec"
         }
     ],
     "java.configuration.updateBuildConfiguration": "automatic"
