--- a/.markdownlintrc
+++ b/.markdownlintrc
@@ -1,10 +1,6 @@
 {
     "MD024": false,
-    "MD013": {
-        "line_length": 140,
-        "code_blocks": false,
-        "tables": false
-    },
+    "MD013": false,
     "MD030": false,
     "MD026": false,
     "MD046": false,
