--- a/misc-tech-topic/openshift/resource-quotas.yml
+++ b/misc-tech-topic/openshift/resource-quotas.yml
@@ -2,17 +2,13 @@
 apiVersion: v1
 kind: ResourceQuota
 metadata:
-name: compute-resources
+    name: compute-resources
 spec:
-limits:
-  - type: "Container"
-    max:
-      pods: "6"
-      cpu: "8"
-      memory: "16Gi"
-      ephemeral-storage: "5Gi"
-    min:
-      cpu: "4"
-      memory: "4Gi"
-      ephemeral-storage: "2Gi"
-      pods: "4"
+    hard:
+        pods: "10"
+        requests.cpu: "2"
+        requests.memory: 2Gi
+        limits.cpu: "3"
+        limits.memory: 3Gi
+    scopes:
+        - NotTerminating
