feat(demo): add more docs and enhance the spring demo

--- a/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
+++ b/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
@@ -11,6 +11,8 @@ logging:
           core: TRACE
 
 spring:
+  datasource:
+     url: ""
   application:
     name: demo-base
 
@@ -26,4 +28,3 @@ spring:
       on-profile:
         - local
 ---
-
