--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,12 @@ indent_style = space
 max_line_length = 120
 insert_final_newline = true
 trim_trailing_whitespace=true
+
+[*.yml]
+charset = utf-8
+indent_size = 2
+end_of_line = lf
+indent_style = space
+max_line_length = 140
+insert_final_newline = true
+trim_trailing_whitespace=true
