--- a/misc-tech-topic/spring/spring-boot/pom.xml
+++ b/misc-tech-topic/spring/spring-boot/pom.xml
@@ -28,7 +28,20 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mustache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -43,6 +56,27 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!-- <plugin> -->
+            <!-- <groupId>com.github.eirslett</groupId> -->
+            <!-- <artifactId>frontend-maven-plugin</artifactId> -->
+            <!-- <version>2.0.0</version> -->
+            <!-- <executions> -->
+            <!-- <execution> -->
+            <!-- <goals> -->
+            <!-- <goal>install-node-and-npm</goal> -->
+            <!-- </goals> -->
+            <!-- </execution> -->
+            <!-- <execution> -->
+            <!-- <id>npm install</id> -->
+            <!-- <goals> -->
+            <!-- <goal>npm</goal> -->
+            <!-- </goals> -->
+            <!-- </execution> -->
+            <!-- </executions> -->
+            <!-- <configuration> -->
+            <!-- <nodeVersion>v18.20.8</nodeVersion> -->
+            <!-- </configuration> -->
+            <!-- </plugin> -->
         </plugins>
     </build>
 </project>
