--- a/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
+++ b/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
@@ -10,6 +10,9 @@ logging:
         demo:
           core: TRACE
 
+spring.security.user.name: user
+spring.security.user.password: password
+
 spring:
   h2:
     console:
