--- a/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
+++ b/misc-tech-topic/spring/spring-boot/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     user:
       name: user
       password: password
+  mustache:
+    servlet:
+      expose-session-attributes:  true
+      expose-request-attributes:  true
   datasource:
     url: jdbc:h2:mem:mydb
     username: sa
