--- a/misc-tech-topic/spring/spring-boot/pom.xml
+++ b/misc-tech-topic/spring/spring-boot/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mustache</artifactId>
         </dependency>
